--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -29,7 +29,7 @@ jobs:
           exit-code: '1'
           ignore-unfixed: true
           vuln-type: 'os,library'
-          severity: 'CRITICAL,HIGH'
+          output: 'results.json'
       - name: Push report to CSPM panel
         run: |
           curl --location --request POST 'https://${{env.CSPM_URL}}/api/v1/artifact/?tenant_id=${{ env.TENANT_ID }}&data_type=TR&save_to_s3=false' --header 'Authorization:Bearer ${{ env.CSPM_TOKEN }}' --form 'file=@"./results.json"'
