--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -5,11 +5,13 @@ on:
     branches:
     - "*"
 env:
-  DOCKER_IMAGE: "accuknox/bootstrap:nginxj"
+  DOCKER_IMAGE: "accuknox/bootstrap:nginx"
   DOCKERFILE_CONTEXT: "${{ github.workspace }}/nginx/"
-  CSPM_URL: "cspm.dev.accuknox.com"
-  CSPM_TOKEN: "eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNjg5NzYzMTU0LCJqdGkiOiJlNTI1MjZkMmJhNDk0NDJmYTc5NzFhYTFmNGM5ZGU4OSIsImlzcyI6ImNzcG0uZGV2LmFjY3Vrbm94LmNvbSJ9.D-coEj4FwAZVStNr16RWH9ieD8KT6fMwxidvpSGxMy4l6W4dEvrwx_Oc0Xt9pL6y_NhNpWv7BoH6exuVknlWqKGFWdKorwn41ZvJy5s97T4RVX7cLTcLx664oVafJ368j04GpapkfOd8ytHKEVvwEJx6JioHi95GQ3dlr1foqOrvCBXZaXAt5rkBFJ_hIbFvacBSRB4YCwFfxprSgUJX4npXuBrO6lznpTDQlGH0avKPhgngTUDburRvyoTvCLFA9KdnMqUjb7wmz6kokJk87AAwsBtg8S7BUZJNL4K5Cx7-FnNnTJWt7s4-fW44uS1hc8-n4uRBb2zEgtr9Y1Am6A"
-  TENANT_ID: "342"
+  CSPM_URL: "cspm.demo.accuknox.com"
+  CSPM_TOKEN: "eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNjk2NDExMzIwLCJqdGkiOiIzMjFiNjYxZTJmN2Q0MGNjOWVmMDU5OWQ5NWU4NDk1MiIsImlzcyI6ImNzcG0uZGVtby5hY2N1a25veC5jb20ifQ.L99J1OtKQy-Wm7ZrLlFYEwEw_6HSk20gq6bkZ9jayNX_vXHF7TKYc-ogNNUrvtpncdHB4l15WBzVdTInLENcQwXYTfFg7XXf83zBO7awBVswk8k7gGNJwhtu8qnfMgVqf_838qDOT6OkaPdkKSW5-uingKXhU1g1D0W8FX1JgjKGDrG2YyD45IUHVwCLr-KEZmLkWrEfNYn34EtQphlimxVJPm04ZTIE45JxYKF1xpiinUOYJTvot7NFiU7Asy9w6OFSjbFPVmWaT4Af19GUzgp70mkVJP6HrvwOqqH_KdzieHNcI525SfUM5ujayBzqz4IcAF5AomXZxUbrGOidzw"
+  #"expiry_at": "2023-10-04T09:22:00Z",
+  #"created_at": "2023-09-04T09:22:00.996979Z",
+  TENANT_ID: "11"
 
 jobs:
   build:
